combi_opti: basics & approximation algorithms.

--- a/source/biblio/textbooks.bib
+++ b/source/biblio/textbooks.bib
@@ -1,3 +1,21 @@
+@BOOK{Cook1997,
+	TITLE = {Combinatorial Optimization - },
+	AUTHOR = {Cook, William AND Cook, William J. AND Korte, rnhard AND Cunningham, William H. AND Pulleyblank, William R. AND Schrijver, Alexander},
+	YEAR = {1997},
+	EDITION = {},
+	ISBN = {978-0-471-55894-1},
+	PUBLISHER = {Wiley},
+	ADDRESS = {New York},
+}
+@BOOK{Cormen2009,
+	TITLE = {Introduction to Algorithms - },
+	AUTHOR = {Cormen, Thomas H. AND Leiserson, Charles E. AND Rivest, Ronald L. AND Stein, Clifford},
+	YEAR = {2009},
+	EDITION = {third edition},
+	ISBN = {978-0-262-03384-8},
+	PUBLISHER = {MIT Press},
+	ADDRESS = {Cambridge},
+}
 @BOOK{Hamermesh2012,
 	TITLE = {Group Theory and Its Application to Physical Problems - },
 	AUTHOR = {Hamermesh, Morton},
@@ -17,7 +35,7 @@
 	ADDRESS = {New York},
 }
 @BOOK{Szabo1996,
-	TITLE = {Modern Quantum Chemistry - Introduction to Advanced Electronic Structure Theory},
+	TITLE = {Modern Quantum Chemistry - Introduction to Advanced Electronic Structure Theory - },
 	AUTHOR = {Szabo, Attila AND Ostlund, Neil S.},
 	YEAR = {1996},
 	EDITION = {},
@@ -25,4 +43,23 @@
 	PUBLISHER = {Courier Corporation},
 	ADDRESS = {New York},
     URL = {https://chemistlibrary.files.wordpress.com/2015/02/modern-quantum-chemistry.pdf},
+}
+@BOOK{Vazirani2002,
+	TITLE = {Approximation Algorithms - },
+	AUTHOR = {Vazirani, Vijay V.},
+	YEAR = {2002},
+	EDITION = {},
+	ISBN = {978-3-540-65367-7},
+	PUBLISHER = {Springer Science & Business Media},
+	ADDRESS = {Berlin Heidelberg},
+}
+@BOOK{Williamson2011,
+	TITLE = {The Design of Approximation Algorithms - },
+	AUTHOR = {Williamson, David P. AND Shmoys, David B.},
+	YEAR = {2011},
+	EDITION = {},
+	ISBN = {978-0-521-19527-0},
+	PUBLISHER = {Cambridge University Press},
+	ADDRESS = {Cambridge},
+    URL = {https://www.designofapproxalgs.com/book.pdf},
 }
