intro/background: entanglement, ingredients, 2ndquant.

--- a/source/biblio/textbooks.bib
+++ b/source/biblio/textbooks.bib
@@ -34,6 +34,15 @@
 	PUBLISHER = {John Wiley & Sons},
 	ADDRESS = {New York},
 }
+@BOOK{Loudon2000,
+	TITLE = {The Quantum Theory of Light - },
+	AUTHOR = {Loudon, Rodney},
+	YEAR = {2000},
+	EDITION = {third edition},
+	ISBN = {978-0-198-50176-3},
+	PUBLISHER = {OUP Oxford},
+	ADDRESS = {New York, London},
+}
 @BOOK{Szabo1996,
 	TITLE = {Modern Quantum Chemistry - Introduction to Advanced Electronic Structure Theory - },
 	AUTHOR = {Szabo, Attila AND Ostlund, Neil S.},
