computing.gates: Gate Model.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -285,6 +285,17 @@
    journal={Quantum},
    publisher={Verein zur Forderung des Open Access Publizierens in den Quantenwissenschaften}
 }
+@article{DiVincenzo_2000,
+title = {The Physical Implementation of Quantum Computation},
+author = {DiVincenzo, David P.},
+year = {2000},
+doi = {https://doi.org/10.1002/1521-3978(200009)48:9/11<771::AID-PROP771>3.0.CO;2-E},
+eprint = {quant-ph/0002077},
+volume = {48},
+number = {9-11},
+pages = {771-783},
+journal = {Fortschritte der Physik},
+}
 @article{EPR_1935,
   title = {Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
   author = {Einstein, A. and Podolsky, B. and Rosen, N.},
