--- a/source/biblio/misc.bib
+++ b/source/biblio/misc.bib
@@ -154,6 +154,13 @@
  url     = {https://medium.com/qiskit/explore-the-clifford-group-a-crucial-tool-for-benchmarking-error-correction-and-more-b9fdca16bb46},
  journal = {Medium Qiskit Blog}
 }
+@misc{QiskitTextbook,
+	title = {Learn Quantum Computation Using Qiskit},
+	author = {Stina Andersson and Abraham Asfaw and Antonio Corcoles and Luciano Bello and Yael Ben-Haim and Mehdi Bozzo-Rey and Sergey Bravyi and Nicholas Bronn and Lauren Capelluto and Almudena Carrera Vazquez and Jack Ceroni and Richard Chen and Albert Frisch and Jay Gambetta and Shelly Garion and Leron Gil and Salvador De La Puente Gonzalez and Francis Harkins and Takashi Imamichi and Hwajung Kang and Amir h. Karamlou and Robert Loredo and David McKay and Antonio Mezzacapo and Zlatko Minev and Ramis Movassagh and Giacomo Nannicini and Paul Nation and Anna Phan and Marco Pistoia and Arthur Rattew and Joachim Schaefer and Javad Shabani and John Smolin and John Stenger and Kristan Temme and Madeleine Tod and Ellinor Wanzambi and Stephen Wood and James Wootton.},
+	year = {2020},
+	url = {http://community.qiskit.org/textbook},
+    urldate={2021-12-30},
+}
 @misc{Ratke_2021,
     title={XA0 Blog},
     author={Ratke, Daniel},
