--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -260,6 +260,19 @@
   journal = {Nature Reviews Physics},
   publisher = {Springer Science and Business Media {LLC}}
 }
+@article{Castelvecchi_2021,
+  title = {Evidence of elusive Majorana particle dies - but computing hope lives on},
+  author = {Davide Castelvecchi},
+  year = {2021},
+  month = mar,
+  doi = {10.1038/d41586-021-00612-z},
+  url = {https://media.nature.com/original/magazine-assets/d41586-021-00612-z/d41586-021-00612-z.pdf},
+  volume = {591},
+  number = {7850},
+  pages = {354--355},
+  journal = {Nature},
+  publisher = {Springer Science and Business Media {LLC}},
+}
 @article{Cirac_1995,
   title = {Quantum Computations with Cold Trapped Ions},
   author = {J. I. Cirac and P. Zoller},
@@ -1002,6 +1015,19 @@ pages = {117-158},
   pages = {759--811},
   journal = {Quantum Information and Computation},
   publisher = {Rinton Press},
+}
+@article{Zhang_2018,
+  title = {{RETRACTED} {ARTICLE}: Quantized Majorana conductance},
+  author = {Hao Zhang and Chun-Xiao Liu and Sasa Gazibegovic and Di Xu and John A. Logan and Guanzhong Wang and Nick van Loo and Jouri D. S. Bommer and Michiel W. A. de Moor and Diana Car and Roy L. M. Op het Veld and Petrus J. van Veldhoven and Sebastian Koelling and Marcel A. Verheijen and Mihir Pendharkar and Daniel J. Pennachio and Borzoyeh Shojaei and Joon Sue Lee and Chris J. Palmstr{\o}m and Erik P. A. M. Bakkers and S. Das Sarma and Leo P. Kouwenhoven},
+  year = {2018},
+  month = mar,
+  doi = {10.1038/nature26142},
+  eprint = {1710.10701},
+  volume = {556},
+  number = {7699},
+  pages = {74--79},
+  journal = {Nature},
+  publisher = {Springer Science and Business Media {LLC}},
 }
 @article{Zhou_2020,
   author = {Zhou, Leo and Wang, Sheng-Tao and Choi, Soonwon and Pichler, Hannes and Lukin, Mikhail D.},
