computing.state: challenges, with QCE21 Clarke.

--- a/source/biblio/misc.bib
+++ b/source/biblio/misc.bib
@@ -154,6 +154,17 @@
  url     = {https://medium.com/qiskit/explore-the-clifford-group-a-crucial-tool-for-benchmarking-error-correction-and-more-b9fdca16bb46},
  journal = {Medium Qiskit Blog}
 }
+@INPROCEEDINGS{Patra_2020,
+  title={19.1 A Scalable Cryo-CMOS 2-to-20GHz Digitally Intensive Controller for 4×32 Frequency Multiplexed Spin Qubits/Transmons in 22nm FinFET Technology for Quantum Computers}, 
+  author={Patra, Bishnu and van Dijk, Jeroen P. G. and Subramanian, Sushil and Corna, Andrea and Xue, Xiao and Jeon, Charles and Sheikh, Farhana and Juarez-Hernandez, Esdras and Esparza, Brando Perez and Rampurawala, Huzaifa and Carlton, Brent and Samkharadze, Nodar and Ravikumar, Surej and Nieva, Carlos and Kim, Sungwon and Lee, Hyung-Jin and Sammak, Amir and Scappucci, Giordano and Veldhorst, Menno and Vandersypen, Lieven M. K. and Babaie, Masoud and Sebastiano, Fabio and Charbon, Edoardo and Pellerano, Stefano},
+  year={2020},
+  doi={10.1109/ISSCC19947.2020.9063109},
+  url={http://pure.tudelft.nl/ws/files/72801887/09063109.pdf},
+  volume={},
+  number={},
+  pages={304-306},
+  booktitle={2020 IEEE International Solid- State Circuits Conference - (ISSCC)}, 
+}
 @misc{QiskitTextbook,
 	title = {Learn Quantum Computation Using Qiskit},
 	author = {Stina Andersson and Abraham Asfaw and Antonio Corcoles and Luciano Bello and Yael Ben-Haim and Mehdi Bozzo-Rey and Sergey Bravyi and Nicholas Bronn and Lauren Capelluto and Almudena Carrera Vazquez and Jack Ceroni and Richard Chen and Albert Frisch and Jay Gambetta and Shelly Garion and Leron Gil and Salvador De La Puente Gonzalez and Francis Harkins and Takashi Imamichi and Hwajung Kang and Amir h. Karamlou and Robert Loredo and David McKay and Antonio Mezzacapo and Zlatko Minev and Ramis Movassagh and Giacomo Nannicini and Paul Nation and Anna Phan and Marco Pistoia and Arthur Rattew and Joachim Schaefer and Javad Shabani and John Smolin and John Stenger and Kristan Temme and Madeleine Tod and Ellinor Wanzambi and Stephen Wood and James Wootton.},
