computing: more from QCE21 Gambetta, Emerson.

--- a/source/biblio/QCE21.bib
+++ b/source/biblio/QCE21.bib
@@ -7,6 +7,15 @@
     howpublished={IEEE QCE21 - Keynote Presentation},
     journal={IEEE International Conference on Quantum Computing and Engineering 2021}
 }
+@misc{QCE21_Emerson,
+    title = {Turbocharging Quantum Computing with Active & Passive Error Suppression},
+    author = {Emerson, Joseph},
+    year = {2021},
+    month = {Oct},
+    url = {https://qce.quantum.ieee.org},
+    howpublished={IEEE QCE21 - Workshop on "Engineering Challenges in Scaling from NISQ to Universal Fault-Tolerant Quantum Computers"},
+    journal={IEEE International Conference on Quantum Computing and Engineering 2021}
+}
 @misc{QCE21_Gambetta,
     title = {Challenges and Directions of Quantum Computing with Superconducting Qubits},
     author = {Gambetta, Jay},
@@ -14,5 +23,14 @@
     month = {Oct},
     url = {https://qce.quantum.ieee.org},
     howpublished={IEEE QCE21 - Keynote Presentation},
+    journal={IEEE International Conference on Quantum Computing and Engineering 2021}
+}
+@misc{QCE21_Reagor,
+    title = {Quantum Computers from Superconducting Qubits},
+    author = {Reagor, Matt},
+    year = {2021},
+    month = {Oct},
+    url = {https://qce.quantum.ieee.org},
+    howpublished={IEEE QCE21 - Workshop on "Engineering Challenges in Scaling from NISQ to Universal Fault-Tolerant Quantum Computers"},
     journal={IEEE International Conference on Quantum Computing and Engineering 2021}
 }
