--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -285,6 +285,20 @@
   journal = {Physical Review Letters},
   publisher = {American Physical Society ({APS})}
 }
+@article{Cross_2019,
+  author = {Cross, Andrew W. and Bishop, Lev S. and Sheldon, Sarah and Nation, Paul D. and Gambetta, Jay M.},
+  title = {Validating quantum computers using randomized model circuits},
+  year = {2019},
+  month = {Sep},
+  doi = {10.1103/PhysRevA.100.032328},
+  eprint = {1811.12926},
+  volume = {100},
+  issue = {3},
+  pages = {032328},
+  numpages = {11},
+  journal = {Phys. Rev. A},
+  publisher = {American Physical Society},
+}
 @article{Dalzell_2020,
    title={How many qubits are needed for quantum computational supremacy?},
    author={Dalzell, Alexander M. and Harrow, Aram W. and Koh, Dax Enshan and La Placa, Rolando L.},
@@ -894,6 +908,21 @@ pages = {117-158},
   doi = {10.5772/intechopen.95023},
   publisher = {{IntechOpen}},
   booktitle = {Quantum Computing and Communications [Working Title]}
+}
+@article{Temme_2017,
+  title = {Error Mitigation for Short-Depth Quantum Circuits},
+  author = {Temme, Kristan and Bravyi, Sergey and Gambetta, Jay M.},
+  year = {2017},
+  month = {Nov},
+  doi = {10.1103/PhysRevLett.119.180509},
+  url = {},
+  eprint = {1612.02058},
+  volume = {119},
+  issue = {18},
+  pages = {180509},
+  numpages = {5},
+  journal = {Phys. Rev. Lett.},
+  publisher = {American Physical Society},
 }
 @article{Vaitiekenas_2020,
    title={Flux-induced topological superconductivity in full-shell nanowires},
