computing.realization: added photonics and neutralatoms, updated the other ones.

--- a/source/biblio/QCE21.bib
+++ b/source/biblio/QCE21.bib
@@ -25,6 +25,15 @@
     howpublished={IEEE QCE21 - Keynote Presentation},
     journal={IEEE International Conference on Quantum Computing and Engineering 2021}
 }
+@misc{QCE21_Pfister,
+    title = {Photonic Quantum Computing},
+    author = {Pfister, Olivier},
+    year = {2021},
+    month = {Oct},
+    url = {https://qce.quantum.ieee.org},
+    howpublished={IEEE QCE21 - Tutorial 16},
+    journal={IEEE International Conference on Quantum Computing and Engineering 2021}
+}
 @misc{QCE21_Reagor,
     title = {Quantum Computers from Superconducting Qubits},
     author = {Reagor, Matt},
@@ -32,5 +41,14 @@
     month = {Oct},
     url = {https://qce.quantum.ieee.org},
     howpublished={IEEE QCE21 - Workshop on "Engineering Challenges in Scaling from NISQ to Universal Fault-Tolerant Quantum Computers"},
+    journal={IEEE International Conference on Quantum Computing and Engineering 2021}
+}
+@misc{QCE21_Silverio,
+    title = {Pulse-level Programming of Neutral-Atom Devices with Pulser - Session 1},
+    author = {Silverio, Henrique},
+    year = {2021},
+    month = {Oct},
+    url = {https://qce.quantum.ieee.org},
+    howpublished={IEEE QCE21 - Tutorial 9},
     journal={IEEE International Conference on Quantum Computing and Engineering 2021}
 }
