--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -38,6 +38,19 @@
   journal = {Nature},
   publisher = {Springer Science and Business Media {LLC}}
 }
+@article{Arrazola_2021,
+  title = {Quantum circuits with many photons on a programmable nanophotonic chip},
+  author = {J. M. Arrazola and V. Bergholm and K. Br{\'{a}}dler and T. R. Bromley and M. J. Collins and I. Dhand and A. Fumagalli and T. Gerrits and A. Goussev and L. G. Helt and J. Hundal and T. Isacsson and R. B. Israel and J. Izaac and S. Jahangiri and R. Janik and N. Killoran and S. P. Kumar and J. Lavoie and A. E. Lita and D. H. Mahler and M. Menotti and B. Morrison and S. W. Nam and L. Neuhaus and H. Y. Qi and N. Quesada and A. Repingon and K. K. Sabapathy and M. Schuld and D. Su and J. Swinarton and A. Sz{\'{a}}va and K. Tan and P. Tan and V. D. Vaidya and Z. Vernon and Z. Zabaneh and Y. Zhang},
+  year = {2021},
+  month = mar,
+  doi = {10.1038/s41586-021-03202-1},
+  eprint = {2103.02109},
+  volume = {591},
+  number = {7848},
+  pages = {54--60},
+  journal = {Nature},
+  publisher = {Springer Science and Business Media {LLC}},
+}
 @article{Arute_2019,
   title = {Quantum supremacy using a programmable superconducting processor},
   author = {Frank Arute and Kunal Arya and Ryan Babbush and Dave Bacon and Joseph C. Bardin and Rami Barends and Rupak Biswas and Sergio Boixo and Fernando G. S. L. Brandao and David A. Buell and Brian Burkett and Yu Chen and Zijun Chen and Ben Chiaro and Roberto Collins and William Courtney and Andrew Dunsworth and Edward Farhi and Brooks Foxen and Austin Fowler and Craig Gidney and Marissa Giustina and Rob Graff and Keith Guerin and Steve Habegger and Matthew P. Harrigan and Michael J. Hartmann and Alan Ho and Markus Hoffmann and Trent Huang and Travis S. Humble and Sergei V. Isakov and Evan Jeffrey and Zhang Jiang and Dvir Kafri and Kostyantyn Kechedzhi and Julian Kelly and Paul V. Klimov and Sergey Knysh and Alexander Korotkov and Fedor Kostritsa and David Landhuis and Mike Lindmark and Erik Lucero and Dmitry Lyakh and Salvatore Mandr{\`{a}} and Jarrod R. McClean and Matthew McEwen and Anthony Megrant and Xiao Mi and Kristel Michielsen and Masoud Mohseni and Josh Mutus and Ofer Naaman and Matthew Neeley and Charles Neill and Murphy Yuezhen Niu and Eric Ostby and Andre Petukhov and John C. Platt and Chris Quintana and Eleanor G. Rieffel and Pedram Roushan and Nicholas C. Rubin and Daniel Sank and Kevin J. Satzinger and Vadim Smelyanskiy and Kevin J. Sung and Matthew D. Trevithick and Amit Vainsencher and Benjamin Villalonga and Theodore White and Z. Jamie Yao and Ping Yeh and Adam Zalcman and Hartmut Neven and John M. Martinis},
@@ -735,6 +748,20 @@ journal = {Fortschritte der Physik},
   journal = {npj Computational Materials},
   publisher = {Springer Science and Business Media {LLC}}
 }
+@article{Menicucci_2006,
+  title = {Universal Quantum Computation with Continuous-Variable Cluster States},
+  author = {Menicucci, Nicolas C. and van Loock, Peter and Gu, Mile and Weedbrook, Christian and Ralph, Timothy C. and Nielsen, Michael A.},
+  year = {2006},
+  month = {Sep},
+  doi = {10.1103/PhysRevLett.97.110501},
+  eprint = {quant-ph/0605198},
+  volume = {97},
+  issue = {11},
+  pages = {110501},
+  numpages = {4},
+  journal = {Phys. Rev. Lett.},
+  publisher = {American Physical Society},
+}
 @article{Mooney_2019,
   title = {Entanglement in a 20-Qubit Superconducting Quantum Computer},
   author = {Gary J. Mooney and Charles D. Hill and Lloyd C. L. Hollenberg},
@@ -832,6 +859,20 @@ pages = {117-158},
   journal = {Nature},
   publisher = {Springer Science and Business Media {LLC}}
 }
+@article{Pfister_2019,
+	title = {Continuous-variable quantum computing in the quantum optical frequency comb},
+	author = {Pfister, Olivier},
+	year = 2019,
+	month = {nov},
+	doi = {10.1088/1361-6455/ab526f},
+	url = {https://iopscience.iop.org/article/10.1088/1361-6455/ab526f/pdf},
+    eprint = {1907.09832},
+	volume = {53},
+	number = {1},
+	pages = {012001},
+	journal = {Journal of Physics B: Atomic, Molecular and Optical Physics},
+	publisher = {{IOP} Publishing},
+}
 @article{Preskill_2018,
   title = {Quantum {C}omputing in the {NISQ} era and beyond},
   author = {Preskill, John},
@@ -845,11 +886,37 @@ pages = {117-158},
   journal = {{Quantum}},
   publisher = {{Verein zur F{\"{o}}rderung des Open Access Publizierens in den Quantenwissenschaften}}
 }
+@article{Raussendorf_2001,
+  title = {A One-Way Quantum Computer},
+  author = {Raussendorf, Robert and Briegel, Hans J.},
+  year = {2001},
+  month = {May},
+  doi = {10.1103/PhysRevLett.86.5188},
+  eprint = {quant-ph/0108118},
+  volume = {86},
+  issue = {22},
+  pages = {5188--5191},
+  journal = {Phys. Rev. Lett.},
+  publisher = {American Physical Society},
+}
 @misc{Ray_2019,
   title={Towards Solving the Navier-Stokes Equation on Quantum Computers}, 
   author={Navamita Ray and Tirtha Banerjee and Balasubramanya Nadiga and Satish Karra},
   year={2019},
   eprint={1904.09033}
+}
+@article{Rudolph_2017,
+  title = {Why I am optimistic about the silicon-photonic route to quantum computing},
+  author = {Terry Rudolph},
+  year = {2017},
+  month = mar,
+  doi = {10.1063/1.4976737},
+  url = {https://aip.scitation.org/doi/pdf/10.1063/1.4976737},
+  volume = {2},
+  number = {3},
+  pages = {030901},
+  journal = {{APL} Photonics},
+  publisher = {{AIP} Publishing},
 }
 @InProceedings{Sammak_2015,
   title="Quantum Computing and Its Potential for Turbulence Simulations",
