mlearn: quantum kernel machines (QCE21).

--- a/source/biblio/QCE21.bib
+++ b/source/biblio/QCE21.bib
@@ -13,7 +13,7 @@
     year = {2021},
     month = {Oct},
     url = {https://qce.quantum.ieee.org},
-    howpublished={IEEE QCE21 - Workshop on "Engineering Challenges in Scaling from NISQ to Universal Fault-Tolerant Quantum Computers"},
+    howpublished={IEEE QCE21 - Workshop 12 on "Engineering Challenges in Scaling from NISQ to Universal Fault-Tolerant Quantum Computers"},
     journal={IEEE International Conference on Quantum Computing and Engineering 2021}
 }
 @misc{QCE21_Gambetta,
@@ -23,6 +23,24 @@
     month = {Oct},
     url = {https://qce.quantum.ieee.org},
     howpublished={IEEE QCE21 - Keynote Presentation},
+    journal={IEEE International Conference on Quantum Computing and Engineering 2021}
+}
+@misc{QCE21_Lloyd,
+    title = {The Co-Evolution of Classical and Quantum AI},
+    author = {Lloyd, Seth},
+    year = {2021},
+    month = {Oct},
+    url = {https://qce.quantum.ieee.org},
+    howpublished={IEEE QCE21 - Workshop 11 on "Quantum Artificial Intelligence"},
+    journal={IEEE International Conference on Quantum Computing and Engineering 2021}
+}
+@misc{QCE21_Perdue,
+    title = {Supernova Classification using Kernel Methods on the Google Sycamore Quantum Processor},
+    author = {Perdue, Gabriel},
+    year = {2021},
+    month = {Oct},
+    url = {https://qce.quantum.ieee.org},
+    howpublished={IEEE QCE21 - Workshop 11 on "Quantum Artificial Intelligence"},
     journal={IEEE International Conference on Quantum Computing and Engineering 2021}
 }
 @misc{QCE21_Pfister,
@@ -40,7 +58,16 @@
     year = {2021},
     month = {Oct},
     url = {https://qce.quantum.ieee.org},
-    howpublished={IEEE QCE21 - Workshop on "Engineering Challenges in Scaling from NISQ to Universal Fault-Tolerant Quantum Computers"},
+    howpublished={IEEE QCE21 - Workshop 12 on "Engineering Challenges in Scaling from NISQ to Universal Fault-Tolerant Quantum Computers"},
+    journal={IEEE International Conference on Quantum Computing and Engineering 2021}
+}
+@misc{QCE21_Scholten,
+    title = {Kernel Matrix Completion for Offline Quantum-Enhanced Machine Learning},
+    author = {Scholten, Travis},
+    year = {2021},
+    month = {Oct},
+    url = {https://qce.quantum.ieee.org},
+    howpublished={IEEE QCE21 - Workshop 11 on "Quantum Artificial Intelligence"},
     journal={IEEE International Conference on Quantum Computing and Engineering 2021}
 }
 @misc{QCE21_Silverio,
