--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -1,3 +1,16 @@
+@article{Abbas_2021,
+  title = {The power of quantum neural networks},
+  author = {Amira Abbas and David Sutter and Christa Zoufal and Aurelien Lucchi and Alessio Figalli and Stefan Woerner},
+  year = {2021},
+  month = jun,
+  doi = {10.1038/s43588-021-00084-1},
+  url = {2011.00027},
+  volume = {1},
+  number = {6},
+  pages = {403--409},
+  journal = {Nature Computational Science},
+  publisher = {Springer Science and Business Media {LLC}},
+}
 @article{Abrams_1999,
    title={Quantum Algorithm Providing Exponential Speed Increase for Finding Eigenvalues and Eigenvectors},
    author={Abrams, Daniel S. and Lloyd, Seth},
@@ -272,6 +285,20 @@
   pages = {129--140},
   journal = {Nature Reviews Physics},
   publisher = {Springer Science and Business Media {LLC}}
+}
+@article{Carleo_2021,
+  title = {Machine learning and the physical sciences},
+  author = {Carleo, Giuseppe and Cirac, Ignacio and Cranmer, Kyle and Daudet, Laurent and Schuld, Maria and Tishby, Naftali and Vogt-Maranto, Leslie and Zdeborov\'a, Lenka},
+  year = {2019},
+  month = {Dec},
+  doi = {10.1103/RevModPhys.91.045002},
+  eprint = {1903.10563},
+  volume = {91},
+  issue = {4},
+  pages = {045002},
+  numpages = {39},
+  journal = {Rev. Mod. Phys.},
+  publisher = {American Physical Society},
 }
 @article{Castelvecchi_2021,
   title = {Evidence of elusive Majorana particle dies - but computing hope lives on},
@@ -579,6 +606,18 @@ journal = {Fortschritte der Physik},
   journal = {Physical Review Letters},
   publisher = {American Physical Society ({APS})}
 }
+@article{Huang_2021,
+  title = {Power of data in quantum machine learning},
+  author = {Hsin-Yuan Huang and Michael Broughton and Masoud Mohseni and Ryan Babbush and Sergio Boixo and Hartmut Neven and Jarrod R. McClean},
+  year = {2021},
+  month = may,
+  doi = {10.1038/s41467-021-22539-9},
+  eprint = {2011.01938},
+  volume = {12},
+  number = {1},
+  journal = {Nature Communications},
+  publisher = {Springer Science and Business Media {LLC}},
+}
 @article{Kandala_2017,
    title={Hardware-efficient variational quantum eigensolver for small molecules and quantum magnets},
    author={Kandala, Abhinav and Mezzacapo, Antonio and Temme, Kristan and Takita, Maika and Brink, Markus and Chow, Jerry M. and Gambetta, Jay M.},
@@ -672,6 +711,12 @@ journal = {Fortschritte der Physik},
    number={12},
    journal={Semiconductor Science and Technology},
    publisher={IOP Publishing}
+}
+@misc{Lloyd_2020,
+  title={Quantum embeddings for machine learning}, 
+  author={Seth Lloyd and Maria Schuld and Aroosa Ijaz and Josh Izaac and Nathan Killoran},
+  year={2020},
+  eprint={2001.03622},
 }
 @article{Loss_1998,
   title = {Quantum computation with quantum dots},
@@ -802,6 +847,12 @@ journal = {Fortschritte der Physik},
    journal={Reviews of Modern Physics},
    publisher={American Physical Society (APS)}
 }
+@misc{Naveh_2021,
+  title={Kernel Matrix Completion for Offline Quantum-Enhanced Machine Learning}, 
+  author={Annie Naveh and Imogen Fitzgerald and Anna Phan and Andrew Lockwood and Travis L. Scholten},
+  year={2021},
+  eprint={2112.08449},
+}
 @article{OBrien_2019,
    title={Calculating energy derivatives for quantum chemistry on a quantum computer},
    author={O’Brien, Thomas E. and Senjean, Bruno and Sagastizabal, Ramiro and Bonet-Monroig, Xavier and Dutkiewicz, Alicja and Buda, Francesco and DiCarlo, Leonardo and Visscher, Lucas},
@@ -845,6 +896,12 @@ pages = {117-158},
    number={1},
    journal={Physical Review Applied},
    publisher={American Physical Society (APS)}
+}
+@misc{Peters_2021,
+  title={Machine learning of high dimensional data on a noisy quantum processor}, 
+  author={Evan Peters and João Caldeira and Alan Ho and Stefan Leichenauer and Masoud Mohseni and Hartmut Neven and Panagiotis Spentzouris and Doug Strain and Gabriel N. Perdue},
+  year={2021},
+  eprint={2101.09581},
 }
 @article{Petit_2020,
   title = {Universal quantum logic in hot silicon qubits},
@@ -1005,6 +1062,18 @@ pages = {117-158},
    journal={Science},
    pages={eaav3392},
    publisher={American Association for the Advancement of Science (AAAS)}
+}
+@article{Vandenberghe_2015,
+  title = {Chordal Graphs and Semidefinite Optimization},
+  author = {Lieven Vandenberghe and Martin S. Andersen},
+  year = {2015},
+  doi = {10.1561/2400000006},
+  url = {https://www.seas.ucla.edu/~vandenbe/publications/chordalsdp.pdf},
+  volume = {1},
+  number = {4},
+  pages = {241--433},
+  journal = {Foundations and Trends{\textregistered} in Optimization},
+  publisher = {Now Publishers},
 }
 @article{Vandersypen_2004,
    title={Real-time detection of single-electron tunneling using a quantum point contact},
