algo: expressiveness of PQC (QCE21).

--- a/source/biblio/QCE21.bib
+++ b/source/biblio/QCE21.bib
@@ -1,3 +1,12 @@
+@misc{QCE21_Bennink,
+    title = {Meaningful Quantification of the Expressiveness of Variational Quantum Circuits},
+    author = {Bennink, Ryan},
+    year = {2021},
+    month = {Oct},
+    url = {https://qce.quantum.ieee.org},
+    howpublished={IEEE QCE21 - Workshop 11 on "Quantum Artificial Intelligence"},
+    journal={IEEE International Conference on Quantum Computing and Engineering 2021}
+}
 @misc{QCE21_Clarke,
     title = {From a Grain of Sand to a Quantum Computer},
     author = {Clarke, James},
