opti: recent results of QAOA (QCE21).

--- a/source/biblio/QCE21.bib
+++ b/source/biblio/QCE21.bib
@@ -34,6 +34,15 @@
     howpublished={IEEE QCE21 - Keynote Presentation},
     journal={IEEE International Conference on Quantum Computing and Engineering 2021}
 }
+@misc{QCE21_Gokhale,
+    title = {Recent results in Quantum Approximate Optimization},
+    author = {Gokhale, Pranav},
+    year = {2021},
+    month = {Oct},
+    url = {https://qce.quantum.ieee.org},
+    howpublished={IEEE QCE21 - Workshop 11 on "Quantum Artificial Intelligence"},
+    journal={IEEE International Conference on Quantum Computing and Engineering 2021}
+}
 @misc{QCE21_Lloyd,
     title = {The Co-Evolution of Classical and Quantum AI},
     author = {Lloyd, Seth},
