--- a/source/biblio/misc.bib
+++ b/source/biblio/misc.bib
@@ -125,6 +125,14 @@
     URL={https://quantumalgorithmzoo.org/},
     urldate={2021-10-23}
 }
+@misc{Marwaha_2021_blog,
+    title={The living QAOA reference},
+    author={Marwaha, Kunal},
+    year={2021},
+    urldate={2022-01-06},
+    URL={https://marwahaha.github.io/qaoa-reference/},
+    howpublished={blog},
+}
 @MISC{Matuschak_2019,
     title={How does the quantum search algorithm work?},
     author={Matuschak, Andy and Nielsen, Michael A.},
