--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -258,6 +258,19 @@
    journal={Physical Review A},
    publisher={American Physical Society (APS)}
 }
+@article{Bravyi_2020,
+   title={Obstacles to Variational Quantum Optimization from Symmetry Protection},
+   author={Bravyi, Sergey and Kliesch, Alexander and Koenig, Robert and Tang, Eugene},
+   year={2020},
+   month={Dec},
+   ISSN={1079-7114},
+   DOI={10.1103/physrevlett.125.260505},
+   eprint={1910.08980},
+   volume={125},
+   number={26},
+   journal={Physical Review Letters},
+   publisher={American Physical Society (APS)},
+}
 @article{Bridgeman_2017,
    title={Hand-waving and interpretive dance: an introductory course on tensor networks},
    author={Bridgeman, Jacob C and Chubb, Christopher T},
@@ -398,12 +411,25 @@ journal = {Fortschritte der Physik},
     month = {Nov},
     eprint={1411.4028},
 }
+@misc{Farhi_2016,
+  title={Quantum Supremacy through the Quantum Approximate Optimization Algorithm}, 
+  author={Edward Farhi and Aram W Harrow},
+  year={2016},
+  month = {Feb},
+  eprint={1602.07674},
+}
 @misc{Farhi_2000,
   title = {Quantum Computation by Adiabatic Evolution},
   author = {Farhi, Edward and Goldstone, Jeffrey and Gutmann, Sam and Sipser, Michael},
   year = {2000},
   month = {Feb},
   eprint = {quant-ph/0001106}
+}
+@misc{Farhi_2021,
+      title={The Quantum Approximate Optimization Algorithm and the Sherrington-Kirkpatrick Model at Infinite Size}, 
+      author={Edward Farhi and Jeffrey Goldstone and Sam Gutmann and Leo Zhou},
+      year={2021},
+      eprint={1910.08187},
 }
 @article{Feynman_1982,
   title = {Simulating physics with computers},
@@ -498,24 +524,37 @@ journal = {Fortschritte der Physik},
    publisher={Verein zur Forderung des Open Access Publizierens in den Quantenwissenschaften}
 }
 @misc{Glover_2019,
-      title={Quantum {B}ridge {A}nalytics {I}: A Tutorial on Formulating and Using {QUBO} Models}, 
-      author={Fred Glover and Gary Kochenberger and Yu Du},
-      year={2019},
-      month = nov,
-      doi={10.1007/s10288-019-00424-y},
-      url={https://www.springerprofessional.de/quantum-bridge-analytics-i-a-tutorial-on-formulating-and-using-q/17436666},
-      eprint={1811.11538},
-      volume = {17},
-      number = {4},
-      pages = {335--371},
-      journal={A Quarterly Journal of Operations Research},
-      publisher = {Springer Science and Business Media {LLC}},
+  title={Quantum {B}ridge {A}nalytics {I}: A Tutorial on Formulating and Using {QUBO} Models}, 
+  author={Fred Glover and Gary Kochenberger and Yu Du},
+  year={2019},
+  month = nov,
+  doi={10.1007/s10288-019-00424-y},
+  url={https://www.springerprofessional.de/quantum-bridge-analytics-i-a-tutorial-on-formulating-and-using-q/17436666},
+  eprint={1811.11538},
+  volume = {17},
+  number = {4},
+  pages = {335--371},
+  journal={A Quarterly Journal of Operations Research},
+  publisher = {Springer Science and Business Media {LLC}},
 }
 @misc{Griffin_2020,
   title={Investigation of quantum algorithms for direct numerical simulation of the Navier-Stokes equations},
   author={K. Griffin and Suhas S. Jain and T. Flint and W. R. Chan},
   year={2020},
   url={http://web.stanford.edu/~sjsuresh/griffin_2019.pdf}
+}
+@article{Guerreschi_2019,
+   title={QAOA for Max-Cut requires hundreds of qubits for quantum speed-up},
+   author={Guerreschi, G. G. and Matsuura, A. Y.},
+   year={2019},
+   month={May},
+   DOI={10.1038/s41598-019-43176-9},
+   eprint={1812.07589},
+   volume={9},
+   ISSN={2045-2322},
+   number={1},
+   journal={Scientific Reports},
+   publisher={Springer Science and Business Media LLC},
 }
 @article{Harrow_2009,
    title={Quantum Algorithm for Linear Systems of Equations},
@@ -542,6 +581,12 @@ journal = {Fortschritte der Physik},
   pages={1-17},
   journal={IEEE Transactions on Quantum Engineering}, 
 }
+@misc{Hashim_2021,
+  title={Optimized fermionic SWAP networks with equivalent circuit averaging for QAOA}, 
+  author={Akel Hashim and Rich Rines and Victory Omole and Ravi K. Naik and John Mark Kreikebaum and David I. Santiago and Frederic T. Chong and Irfan Siddiqi and Pranav Gokhale},
+  year={2021},
+  eprint={2111.04572},
+}
 @article{Hastings_2014,
     author = {Hastings, Matthew B. and Wecker, Dave and Bauer, Bela and Troyer, Matthias},
     title = {Improving Quantum Algorithms for Quantum Chemistry},
@@ -556,6 +601,12 @@ journal = {Fortschritte der Physik},
     pages = {1–21},
     journal = {Quantum Info. Comput.},
     publisher = {Rinton Press, Incorporated},
+}
+@misc{Hastings_2019,
+      title={Classical and Quantum Bounded Depth Approximation Algorithms}, 
+      author={M. B. Hastings},
+      year={2019},
+      eprint={1905.07047},
 }
 @article{Hastings_2021,
    title={Dynamically Generated Logical Qubits},
@@ -793,6 +844,12 @@ journal = {Fortschritte der Physik},
   journal = {npj Computational Materials},
   publisher = {Springer Science and Business Media {LLC}}
 }
+@misc{Marwaha_2021,
+      title={Bounds on approximating Max $k$XOR with quantum and classical local algorithms}, 
+      author={Kunal Marwaha and Stuart Hadfield},
+      year={2021},
+      eprint={2109.10833},
+}
 @article{Menicucci_2006,
   title = {Universal Quantum Computation with Continuous-Variable Cluster States},
   author = {Menicucci, Nicolas C. and van Loock, Peter and Gu, Mile and Weedbrook, Christian and Ralph, Timothy C. and Nielsen, Michael A.},
@@ -942,6 +999,12 @@ pages = {117-158},
   pages = {79},
   journal = {{Quantum}},
   publisher = {{Verein zur F{\"{o}}rderung des Open Access Publizierens in den Quantenwissenschaften}}
+}
+@misc{Quiroz_2021,
+  title={Quantifying the Impact of Precision Errors on Quantum Approximate Optimization Algorithms}, 
+  author={Gregory Quiroz and Paraj Titum and Phillip Lotshaw and Pavel Lougovski and Kevin Schultz and Eugene Dumitrescu and Itay Hen},
+  year={2021},
+  eprint={2109.04482},
 }
 @article{Raussendorf_2001,
   title = {A One-Way Quantum Computer},
@@ -1125,6 +1188,19 @@ pages = {117-158},
   pages = {1090-1104},
   journal = {Combustion Theory and Modelling},
   publisher = {Taylor & Francis}
+}
+@article{Wang_2021,
+   title={Noise-induced barren plateaus in variational quantum algorithms},
+   author={Wang, Samson and Fontana, Enrico and Cerezo, M. and Sharma, Kunal and Sone, Akira and Cincio, Lukasz and Coles, Patrick J.},
+   year={2021},
+   month={Nov},
+   url={http://dx.doi.org/10.1038/s41467-021-27045-6},
+   DOI={10.1038/s41467-021-27045-6},
+   volume={12},
+   ISSN={2041-1723},
+   number={1},
+   journal={Nature Communications},
+   publisher={Springer Science and Business Media LLC},
 }
 @article{Wecker_2014,
    title={Gate-count estimates for performing quantum chemistry on small quantum computers},
