computing.state: more from QCE21.

--- a/source/biblio/QCE21.bib
+++ b/source/biblio/QCE21.bib
@@ -52,6 +52,15 @@
     howpublished={IEEE QCE21 - Workshop 11 on "Quantum Artificial Intelligence"},
     journal={IEEE International Conference on Quantum Computing and Engineering 2021}
 }
+@misc{QCE21_Matsuura,
+    title = {Coupling Quantum Systems and HPC Systems at Scale},
+    author = {Matsuura, Anne},
+    year = {2021},
+    month = {Oct},
+    url = {https://qce.quantum.ieee.org},
+    howpublished={IEEE QCE21 - Workshop 13 on "Integrating High-Performance Computing with Quantum Computing"},
+    journal={IEEE International Conference on Quantum Computing and Engineering 2021}
+}
 @misc{QCE21_Perdue,
     title = {Supernova Classification using Kernel Methods on the Google Sycamore Quantum Processor},
     author = {Perdue, Gabriel},
