--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -537,6 +537,18 @@ journal = {Fortschritte der Physik},
   journal={A Quarterly Journal of Operations Research},
   publisher = {Springer Science and Business Media {LLC}},
 }
+@article{Gold_2021,
+  title = {Entanglement across separate silicon dies in a modular superconducting qubit device},
+  author = {Alysson Gold and J. P. Paquette and Anna Stockklauser and Matthew J. Reagor and M. Sohaib Alam and Andrew Bestwick and Nicolas Didier and Ani Nersisyan and Feyza Oruc and Armin Razavi and Ben Scharmann and Eyob A. Sete and Biswajit Sur and Davide Venturelli and Cody James Winkleblack and Filip Wudarski and Mike Harburn and Chad Rigetti},
+  year = {2021},
+  month = sep,
+  doi = {10.1038/s41534-021-00484-1},
+  url = {https://doi.org/10.1038/s41534-021-00484-1},
+  volume = {7},
+  number = {1},
+  journal = {npj Quantum Information},
+  publisher = {Springer Science and Business Media {LLC}},
+}
 @misc{Griffin_2020,
   title={Investigation of quantum algorithms for direct numerical simulation of the Navier-Stokes equations},
   author={K. Griffin and Suhas S. Jain and T. Flint and W. R. Chan},
@@ -644,6 +656,19 @@ journal = {Fortschritte der Physik},
   publisher = {Springer International Publishing},
   pages = {145--156},
   booktitle = {Quantum Technology and Optimization Problems. QTOP 2019. Lecture Notes in Computer Science, vol 11413.},
+}
+@article{Holmes_2020,
+  title = {Impact of qubit connectivity on quantum algorithm performance},
+  author = {Adam Holmes and Sonika Johri and Gian Giacomo Guerreschi and James S Clarke and A Y Matsuura},
+  year = {2020},
+  month = mar,
+  doi = {10.1088/2058-9565/ab73e0},
+  eprint = {1811.02125},
+  volume = {5},
+  number = {2},
+  pages = {025009},
+  journal = {Quantum Science and Technology},
+  publisher = {{IOP} Publishing},
 }
 @article{Hong_1987,
   title = {Measurement of subpicosecond time intervals between two photons by interference},
@@ -845,10 +870,10 @@ journal = {Fortschritte der Physik},
   publisher = {Springer Science and Business Media {LLC}}
 }
 @misc{Marwaha_2021,
-      title={Bounds on approximating Max $k$XOR with quantum and classical local algorithms}, 
-      author={Kunal Marwaha and Stuart Hadfield},
-      year={2021},
-      eprint={2109.10833},
+  title={Bounds on approximating Max $k$XOR with quantum and classical local algorithms}, 
+  author={Kunal Marwaha and Stuart Hadfield},
+  year={2021},
+  eprint={2109.10833},
 }
 @article{Menicucci_2006,
   title = {Universal Quantum Computation with Continuous-Variable Cluster States},
@@ -1024,6 +1049,20 @@ pages = {117-158},
   author={Navamita Ray and Tirtha Banerjee and Balasubramanya Nadiga and Satish Karra},
   year={2019},
   eprint={1904.09033}
+}
+@article{Reiher2017,
+  title = {Elucidating reaction mechanisms on quantum computers},
+  author = {Markus Reiher and Nathan Wiebe and Krysta M. Svore and Dave Wecker and Matthias Troyer},
+  year = {2017},
+  month = jul,
+  doi = {10.1073/pnas.1619152114},
+  url = {https://www.pnas.org/content/pnas/114/29/7555.full.pdf},
+  eprint = {1605.03590},
+  volume = {114},
+  number = {29},
+  pages = {7555--7560},
+  journal = {Proceedings of the National Academy of Sciences},
+  publisher = {Proceedings of the National Academy of Sciences},
 }
 @article{Rudolph_2017,
   title = {Why I am optimistic about the silicon-photonic route to quantum computing},
