chemistry: a resource estimation (from QCE21).

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -1050,7 +1050,7 @@ pages = {117-158},
   year={2019},
   eprint={1904.09033}
 }
-@article{Reiher2017,
+@article{Reiher_2017,
   title = {Elucidating reaction mechanisms on quantum computers},
   author = {Markus Reiher and Nathan Wiebe and Krysta M. Svore and Dave Wecker and Matthias Troyer},
   year = {2017},
