opti: referenced ExxonMobil (QCE21).

--- a/source/biblio/QCE21.bib
+++ b/source/biblio/QCE21.bib
@@ -106,3 +106,12 @@
     howpublished={IEEE QCE21 - Tutorial 9},
     journal={IEEE International Conference on Quantum Computing and Engineering 2021}
 }
+@misc{QCE21_Trenev,
+    title = {Beyond MaxCut: Experiences with quantum optimization algorithms applied to routing problems},
+    author = {Trenev, Dimitar},
+    year = {2021},
+    month = {Oct},
+    url = {https://qce.quantum.ieee.org},
+    howpublished={IEEE QCE21 - Workshop 17 on "Developing the Quantum Approximate Optimization Algorithm"},
+    journal={IEEE International Conference on Quantum Computing and Engineering 2021}
+}
