materials/stabilizer: referenced QCE21.

--- a/source/biblio/QCE21.bib
+++ b/source/biblio/QCE21.bib
@@ -7,6 +7,15 @@
     howpublished={IEEE QCE21 - Workshop 11 on "Quantum Artificial Intelligence"},
     journal={IEEE International Conference on Quantum Computing and Engineering 2021}
 }
+@misc{QCE21_Bennink_Wks1,
+    title = {Stabilizer-Based Methods for Simulating Near-Clifford Circuits},
+    author = {Bennink, Ryan},
+    year = {2021},
+    month = {Oct},
+    url = {https://qce.quantum.ieee.org},
+    howpublished={IEEE QCE21 - Workshop 1 on "Advanced Simulations of Quantum Computations"},
+    journal={IEEE International Conference on Quantum Computing and Engineering 2021}
+}
 @misc{QCE21_Clarke,
     title = {From a Grain of Sand to a Quantum Computer},
     author = {Clarke, James},
