--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -1102,6 +1102,12 @@ pages = {117-158},
    journal={Physical Review A},
    publisher={American Physical Society (APS)}
 }
+@misc{Schuld_2022,
+  title={Is quantum advantage the right goal for quantum machine learning?}, 
+  author={Schuld, Maria and Killoran, Nathan},
+  year={2022},
+  eprint={2203.01340},
+}
 @article{Shalm_2015,
   title = {Strong Loophole-Free Test of Local Realism},
   author = {Shalm, Lynden K. and Meyer-Scott, Evan and Christensen, Bradley G. and others},
