nvcenters: Nitrogen-vacancy centers in diamonds.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -694,6 +694,19 @@ journal = {Fortschritte der Physik},
   journal = {Nature Communications},
   publisher = {Springer Science and Business Media {LLC}},
 }
+@article{Jelezko_2006,
+  title = {Single defect centres in diamond: A review},
+  author = {F. Jelezko and J. Wrachtrup},
+  year = {2006},
+  month = oct,
+  doi = {10.1002/pssa.200671403},
+  url = {https://www3.physik.uni-stuttgart.de/TR21/common/show_file.php/publications/193/publication.pdf},
+  volume = {203},
+  number = {13},
+  pages = {3207--3225},
+  journal = {physica status solidi (a)},
+  publisher = {Wiley},
+}
 @article{Kandala_2017,
    title={Hardware-efficient variational quantum eigensolver for small molecules and quantum magnets},
    author={Kandala, Abhinav and Mezzacapo, Antonio and Temme, Kristan and Takita, Maika and Brink, Markus and Chow, Jerry M. and Gambetta, Jay M.},
