online: new links related to qutube.nl.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -761,6 +761,19 @@ journal = {Fortschritte der Physik},
   journal = {Phys. Rev. Lett.},
   publisher = {American Physical Society}
 }
+@article{Lahtinen_2017,
+  title = {A Short Introduction to Topological Quantum Computation},
+  author = {Ville Lahtinen and Jiannis Pachos},
+  year = {2017},
+  month = sep,
+  volume = {3},
+  number = {3},
+  doi = {10.21468/scipostphys.3.3.021},
+  url = {https://scipost.org/SciPostPhys.3.3.021/pdf},
+  eprint = {1705.04103},
+  journal = {{SciPost} Physics},
+  publisher = {Stichting {SciPost}},
+}
 @article{LaRose_2019,
   title = {Overview and {C}omparison of {G}ate {L}evel {Q}uantum {S}oftware {P}latforms},
   author = {LaRose, Ryan},
