adiabatic/supercond: much more about hardware and state of the art.

--- a/source/biblio/misc.bib
+++ b/source/biblio/misc.bib
@@ -125,6 +125,15 @@
     URL={https://quantumalgorithmzoo.org/},
     urldate={2021-10-23}
 }
+@misc{Lidar_2021,
+    title = {Achievements of the IARPA-QEO and DARPA-QAFS programs, and the prospects for quantum enhancement with quantum annealing},
+    author = {Lidar, Daniel A.},
+    year = {2021},
+    month = {June},
+    url = {https://aqc2021.org/oral_slides/2-7_DanielLidar.pdf},
+    howpublished={AQC 2021 - Special session on (inter)national projects for quantum annealing},
+    journal={Adiabatic Quantum Computing Conference 2021}
+}
 @misc{Marwaha_2021_blog,
     title={The living QAOA reference},
     author={Marwaha, Kunal},
