--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -26,6 +26,18 @@
    journal={Physical Review Letters},
    publisher={American Physical Society (APS)},
 }
+@article{Albash_2018b,
+	title = {Demonstration of a Scaling Advantage for a Quantum Annealer over Simulated Annealing},
+	author = {Tameem Albash and Daniel A. Lidar},
+	year = 2018,
+	month = {jul},
+	doi = {10.1103/physrevx.8.031016},
+	eprint = {1705.07452},
+	volume = {8},
+	number = {3},
+	journal = {Physical Review X},
+	publisher = {American Physical Society ({APS})},
+}
 @article{Ansaloni_2020,
   title = {Single-electron operations in a foundry-fabricated array of quantum dots},
   author = {Fabio Ansaloni and Anasua Chatterjee and Heorhii Bohuslavskyi and Benoit Bertrand and Louis Hutin and Maud Vinet and Ferdinand Kuemmeth},
@@ -352,6 +364,19 @@
   journal = {Phys. Rev. A},
   publisher = {American Physical Society},
 }
+@article{Crosson_2021,
+	title = {Prospects for quantum enhancement with diabatic quantum annealing},
+	author = {E. J. Crosson and D. A. Lidar},
+	year = 2021,
+	month = {may},
+	doi = {10.1038/s42254-021-00313-6},
+	eprint = {2008.09913},
+	volume = {3},
+	number = {7},
+	pages = {466--489},
+	journal = {Nature Reviews Physics},
+	publisher = {Springer Science and Business Media {LLC}},
+}
 @article{Dalzell_2020,
    title={How many qubits are needed for quantum computational supremacy?},
    author={Dalzell, Alexander M. and Harrow, Aram W. and Koh, Dax Enshan and La Placa, Rolando L.},
@@ -364,6 +389,18 @@
    pages={264},
    journal={Quantum},
    publisher={Verein zur Forderung des Open Access Publizierens in den Quantenwissenschaften}
+}
+@article{Denchev_2016,
+	title = {What is the Computational Value of Finite-Range Tunneling?},
+	author = {Vasil S. Denchev and Sergio Boixo and Sergei V. Isakov and Nan Ding and Ryan Babbush and Vadim Smelyanskiy and John Martinis and Hartmut Neven},
+	year = 2016,
+	month = {aug},
+	doi = {10.1103/physrevx.6.031015},
+	eprint = {1512.02206},
+	volume = {6},
+	number = {3},
+	journal = {Physical Review X},
+	publisher = {American Physical Society ({APS})},
 }
 @article{DiVincenzo_2000,
 title = {The Physical Implementation of Quantum Computation},
@@ -523,6 +560,19 @@ journal = {Fortschritte der Physik},
    journal={Quantum},
    publisher={Verein zur Forderung des Open Access Publizierens in den Quantenwissenschaften}
 }
+@article{Glaetzle_2017,
+	title = {A coherent quantum annealer with Rydberg atoms},
+	author = {A. W. Glaetzle and R. M. W. van Bijnen and P. Zoller and W. Lechner},
+	year = 2017,
+	month = {jun},
+	doi = {10.1038/ncomms15813},
+	url = {https://www.nature.com/articles/ncomms15813.pdf},
+    eprint = {1611.02594},
+	volume = {8},
+	number = {1},
+	journal = {Nature Communications},
+	publisher = {Springer Science and Business Media {LLC}},
+}
 @misc{Glover_2019,
   title={Quantum {B}ridge {A}nalytics {I}: A Tutorial on Formulating and Using {QUBO} Models}, 
   author={Fred Glover and Gary Kochenberger and Yu Du},
@@ -567,6 +617,18 @@ journal = {Fortschritte der Physik},
    number={1},
    journal={Scientific Reports},
    publisher={Springer Science and Business Media LLC},
+}
+@article{Harris_2010,
+	title = {Experimental investigation of an eight-qubit unit cell in a superconducting optimization processor},
+	author = {R. Harris and M. W. Johnson and T. Lanting and A. J. Berkley and J. Johansson and P. Bunyk and E. Tolkacheva and E. Ladizinsky and N. Ladizinsky and T. Oh and F. Cioata and I. Perminov and P. Spear and C. Enderud and C. Rich and S. Uchaikin and M. C. Thom and E. M. Chapple and J. Wang and B. Wilson and M. H. S. Amin and N. Dickson and K. Karimi and B. Macready and C. J. S. Truncik and G. Rose},
+	year = 2010,
+	month = {jul},
+	doi = {10.1103/physrevb.82.024511},
+	eprint = {1004.1628},
+	volume = {82},
+	number = {2},
+	journal = {Physical Review B},
+	publisher = {American Physical Society ({APS})},
 }
 @article{Harrow_2009,
    title={Quantum Algorithm for Linear Systems of Equations},
@@ -960,6 +1022,16 @@ journal = {Fortschritte der Physik},
   author={Annie Naveh and Imogen Fitzgerald and Anna Phan and Andrew Lockwood and Travis L. Scholten},
   year={2021},
   eprint={2112.08449},
+}
+@inproceedings{Novikov_2018,
+	title = {Exploring More-Coherent Quantum Annealing},
+	author = {Sergey Novikov and Robert Hinkey and Steven Disseler and James I Basham and Tameem Albash and Andrew Risinger and David Ferguson and Daniel A. Lidar and Kenneth M. Zick},
+	year = 2018,
+	month = {nov},
+	doi = {10.1109/icrc.2018.8638625},
+	eprint = {1809.04485},
+	booktitle = {2018 {IEEE} International Conference on Rebooting Computing ({ICRC})},
+    publisher = {{IEEE}},
 }
 @article{OBrien_2019,
    title={Calculating energy derivatives for quantum chemistry on a quantum computer},
