--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -849,6 +849,18 @@ journal = {Fortschritte der Physik},
   journal = {{Quantum}},
   publisher = {{Verein zur F{\"{o}}rderung des Open Access Publizierens in den Quantenwissenschaften}}
 }
+@article{Lechner_2015,
+  author = {Wolfgang Lechner and Philipp Hauke and Peter Zoller},
+  title = {A quantum annealing architecture with all-to-all connectivity from local interactions},
+  year = {2015},
+  month = oct,
+  doi = {10.1126/sciadv.1500838},
+  url = {https://doi.org/10.1126/sciadv.1500838},
+  volume = {1},
+  number = {9},
+  journal = {Science Advances},
+  publisher = {American Association for the Advancement of Science ({AAAS})},
+}
 @article{Lee_2019,
    title={Hybrid quantum linear equation algorithm and its experimental test on IBM Quantum Experience},
    author={Lee, Yonghae and Joo, Jaewoo and Lee, Soojoon},
