state/topological: references.

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -170,6 +170,20 @@
    journal={Physical Review X},
    publisher={American Physical Society (APS)},
 }
+@article{Babbush_2021,
+  title = {Focus beyond Quadratic Speedups for Error-Corrected Quantum Advantage},
+  author = {Babbush, Ryan and McClean, Jarrod R. and Newman, Michael and Gidney, Craig and Boixo, Sergio and Neven, Hartmut},
+  year = {2021},
+  month = {Mar},
+  doi = {10.1103/PRXQuantum.2.010103},
+  url = {https://journals.aps.org/prxquantum/pdf/10.1103/PRXQuantum.2.010103},
+  volume = {2},
+  issue = {1},
+  pages = {010103},
+  numpages = {11},
+  journal = {PRX Quantum},
+  publisher = {American Physical Society},
+}
 @article{Barkoutsos_2018,
    title={Quantum algorithms for electronic structure calculations: Particle-hole Hamiltonian and optimized wave-function expansions},
    author={Barkoutsos, Panagiotis Kl. and Gonthier, Jerome F. and Sokolov, Igor and Moll, Nikolaj and Salis, Gian and Fuhrer, Andreas and Ganzhorn, Marc and Egger, Daniel J. and Troyer, Matthias and Mezzacapo, Antonio and et al.},
@@ -756,6 +770,19 @@ journal = {Fortschritte der Physik},
   journal = {Nature Communications},
   publisher = {Springer Science and Business Media {LLC}},
 }
+@article{Huang_2022,
+  title = {Quantum advantage in learning from experiments},
+  author = {Hsin-Yuan Huang and Michael Broughton and Jordan Cotler and Sitan Chen and Jerry Li and Masoud Mohseni and Hartmut Neven and Ryan Babbush and Richard Kueng and John Preskill and Jarrod R. McClean},
+  year = {2022},
+  month = jun,
+  doi = {10.1126/science.abn7293},
+  url = {https://ai.googleblog.com/2022/06/quantum-advantage-in-learning-from.html},
+  volume = {376},
+  number = {6598},
+  pages = {1182--1186},
+  journal = {Science},
+  publisher = {American Association for the Advancement of Science ({AAAS})},
+}
 @article{Jelezko_2006,
   title = {Single defect centres in diamond: A review},
   author = {F. Jelezko and J. Wrachtrup},
@@ -968,6 +995,19 @@ journal = {Fortschritte der Physik},
   number = {1},
   journal = {npj Computational Materials},
   publisher = {Springer Science and Business Media {LLC}}
+}
+@article{Madsen_2022,
+  title = {Quantum computational advantage with a programmable photonic processor},
+  author = {Lars S. Madsen and Fabian Laudenbach and Mohsen Falamarzi. Askarani and Fabien Rortais and Trevor Vincent and Jacob F. F. Bulmer and Filippo M. Miatto and Leonhard Neuhaus and Lukas G. Helt and Matthew J. Collins and Adriana E. Lita and Thomas Gerrits and Sae Woo Nam and Varun D. Vaidya and Matteo Menotti and Ish Dhand and Zachary Vernon and Nicol{\'{a}}s Quesada and Jonathan Lavoie},
+  year = {2022},
+  month = jun,
+  doi = {10.1038/s41586-022-04725-x},
+  url = {https://doi.org/10.1038/s41586-022-04725-x},
+  volume = {606},
+  number = {7912},
+  pages = {75--81},
+  journal = {Nature},
+  publisher = {Springer Science and Business Media {LLC}},
 }
 @misc{Marwaha_2021,
   title={Bounds on approximating Max $k$XOR with quantum and classical local algorithms}, 
