--- a/source/biblio/lectures.bib
+++ b/source/biblio/lectures.bib
@@ -14,6 +14,14 @@
     HOWPUBLISHED = {Lectures in Quantum Science and Technology at Technical University of Munich},
     URL={https://www.ph.tum.de/academics/org/cc/mh/PH1010/}
 }
+@MISC{Kosterlitz2016,
+	AUTHOR = {Kosterlitz, John Michael},
+	YEAR = {2016},
+	TITLE = {Topological {D}efects and {P}hase {T}ransitions},
+    ORGANIZATION = {Nobel Foundation},
+    HOWPUBLISHED = {Nobel Lecture},
+    URL={https://www.nobelprize.org/uploads/2018/06/kosterlitz-lecture.pdf}
+}
 @MISC{Preskill229,
 	AUTHOR = {Preskill, John},
 	YEAR = {2021},
