--- a/source/biblio/misc.bib
+++ b/source/biblio/misc.bib
@@ -180,6 +180,14 @@
  url     = {https://medium.com/qiskit/explore-the-clifford-group-a-crucial-tool-for-benchmarking-error-correction-and-more-b9fdca16bb46},
  journal = {Medium Qiskit Blog}
 }
+@MISC{NobelPhysics2016,
+	TITLE = {Topological Phase Transitions and Topological Phases of Matter},
+	AUTHOR = {Class for Physics of the Royal Swedish Academy of Sciences},
+	YEAR = {2016},
+    ORGANIZATION = {Royal Swedish Academy of Sciences},
+    HOWPUBLISHED = {Scientific Background on the Nobel Prize in Physics 2016},
+    URL={https://www.nobelprize.org/uploads/2018/06/advanced-physicsprize2016-1.pdf}
+}
 @INPROCEEDINGS{Patra_2020,
   title={19.1 A Scalable Cryo-CMOS 2-to-20GHz Digitally Intensive Controller for 4×32 Frequency Multiplexed Spin Qubits/Transmons in 22nm FinFET Technology for Quantum Computers}, 
   author={Patra, Bishnu and van Dijk, Jeroen P. G. and Subramanian, Sushil and Corna, Andrea and Xue, Xiao and Jeon, Charles and Sheikh, Farhana and Juarez-Hernandez, Esdras and Esparza, Brando Perez and Rampurawala, Huzaifa and Carlton, Brent and Samkharadze, Nodar and Ravikumar, Surej and Nieva, Carlos and Kim, Sungwon and Lee, Hyung-Jin and Sammak, Amir and Scappucci, Giordano and Veldhorst, Menno and Vandersypen, Lieven M. K. and Babaie, Masoud and Sebastiano, Fabio and Charbon, Edoardo and Pellerano, Stefano},
