mlearn: PennyLane QML Demos

--- a/source/biblio/articles.bib
+++ b/source/biblio/articles.bib
@@ -4,7 +4,7 @@
   year = {2021},
   month = jun,
   doi = {10.1038/s43588-021-00084-1},
-  url = {2011.00027},
+  eprint = {2011.00027},
   volume = {1},
   number = {6},
   pages = {403--409},
